# ugc/src/api/v1/grades.py
@@ -10,7 +10,7 @@ from src.core.config import PREFIX_BASE_ROUTE
 from src.db.repositories import GradeRepository, get_grade_repository
 from src.helpers.check_token import check_access_token
 from src.models.auth import AuthUser
-from src.models.grades import GradeCreate, GradeUpdate
+from src.models.grades import GradeFilmCreate, GradeUpdate
 
 routers = Blueprint("grades", __name__, url_prefix=PREFIX_BASE_ROUTE + "/grades")
 
@@ -18,8 +18,9 @@ routers = Blueprint("grades", __name__, url_prefix=PREFIX_BASE_ROUTE + "/grades"
 @routers.route("/", methods=["GET"], strict_slashes=False)
 @check_access_token
 @inject
-def get_all(user: AuthUser, grade_manager: Annotated[GradeRepository, Depends(get_grade_repository)]):
-    grades = grade_manager.find_all(condition={"user_id": user.id})
+def get_all(user: AuthUser, repository: Annotated[GradeRepository, Depends(get_grade_repository)]):
+    """Просмотр списка фильмов оцененных пользователем."""
+    grades = repository.find_all(condition={"user_id": user.id})
 
     return jsonify([grade.model_dump() for grade in grades]), HTTPStatus.OK
 
@@ -27,14 +28,17 @@ def get_all(user: AuthUser, grade_manager: Annotated[GradeRepository, Depends(ge
 @routers.route("/<uuid:film_id>", methods=["POST"], strict_slashes=False)
 @check_access_token
 @inject
-def create(user: AuthUser, film_id: UUID, grade_manager: Annotated[GradeRepository, Depends(get_grade_repository)]):
+def create(user: AuthUser, film_id: UUID, repository: Annotated[GradeRepository, Depends(get_grade_repository)]):
+    """Добавление оценки к фильму пользователем."""
     request_data = request.json
     try:
-        data_model = GradeCreate(
+        data_model = GradeFilmCreate(
             user_id=user.id, film_id=str(film_id), rating=request_data.get("rating") if request_data else None
         )
 
-        grade = grade_manager.create(data_model.model_dump())
+        grade = repository.find_one({"user_id": data_model.user_id, "film_id": data_model.film_id})
+        if grade is None:
+            grade = repository.create(data_model.model_dump())
 
         return jsonify(grade.model_dump()), HTTPStatus.CREATED
 
@@ -45,8 +49,9 @@ def create(user: AuthUser, film_id: UUID, grade_manager: Annotated[GradeReposito
 @routers.route("/<uuid:film_id>", methods=["GET"], strict_slashes=False)
 @check_access_token
 @inject
-def get(user: AuthUser, film_id: UUID, grade_manager: Annotated[GradeRepository, Depends(get_grade_repository)]):
-    grade = grade_manager.find_one({"user_id": user.id, "film_id": str(film_id)})
+def get(user: AuthUser, film_id: UUID, repository: Annotated[GradeRepository, Depends(get_grade_repository)]):
+    """Просмотр оценки к фильму."""
+    grade = repository.find_one({"user_id": user.id, "film_id": str(film_id)})
 
     if grade is None:
         abort(HTTPStatus.NOT_FOUND, description="Film not found")
@@ -57,15 +62,16 @@ def get(user: AuthUser, film_id: UUID, grade_manager: Annotated[GradeRepository,
 @routers.route("/<uuid:film_id>", methods=["PATCH"], strict_slashes=False)
 @check_access_token
 @inject
-def update(user: AuthUser, film_id: UUID, grade_manager: Annotated[GradeRepository, Depends(get_grade_repository)]):
+def update(user: AuthUser, film_id: UUID, repository: Annotated[GradeRepository, Depends(get_grade_repository)]):
+    """Обновление оценки к фильму пользователем."""
     request_data = request.json
     try:
         data_model = GradeUpdate.model_validate(request_data)
-        grade_exist = grade_manager.find_one({"user_id": user.id, "film_id": str(film_id)})
+        grade_exist = repository.find_one({"user_id": user.id, "film_id": str(film_id)})
         if grade_exist is None:
             abort(HTTPStatus.NOT_FOUND, description="Film not found")
 
-        grade = grade_manager.update(grade_exist, data_model.rating)
+        grade = repository.update(grade_exist, data_model.rating)
 
         return jsonify(grade.model_dump()), HTTPStatus.OK
 
@@ -76,12 +82,13 @@ def update(user: AuthUser, film_id: UUID, grade_manager: Annotated[GradeReposito
 @routers.route("/<uuid:film_id>", methods=["DELETE"], strict_slashes=False)
 @check_access_token
 @inject
-def delete(user: AuthUser, film_id: UUID, grade_manager: Annotated[GradeRepository, Depends(get_grade_repository)]):
-    grade = grade_manager.find_one({"user_id": user.id, "film_id": str(film_id)})
+def delete(user: AuthUser, film_id: UUID, repository: Annotated[GradeRepository, Depends(get_grade_repository)]):
+    """Удаление оценки к фильму."""
+    grade = repository.find_one({"user_id": user.id, "film_id": str(film_id)})
 
     if grade is None:
         abort(HTTPStatus.NOT_FOUND, description="Film not found")
 
-    grade_manager.delete(grade)
+    repository.delete(grade)
 
     return jsonify({}), HTTPStatus.NO_CONTENT
