# ugc/src/models/grades.py
@@ -3,9 +3,16 @@ from datetime import datetime, timezone
 from pydantic import BaseModel, Field
 
 
-class GradeCreate(BaseModel):
+class GradeFilmCreate(BaseModel):
     user_id: str
     film_id: str
+    rating: int = Field(..., ge=0, le=10)
+    timestamp: datetime = Field(default_factory=lambda: datetime.now(timezone.utc))
+
+
+class GradeReviewCreate(BaseModel):
+    user_id: str
+    review_id: str
     rating: int = Field(..., ge=0, le=10)
     timestamp: datetime = Field(default_factory=lambda: datetime.now(timezone.utc))
 
